--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
+            <h1>Yunhyuk Jeon</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -73,9 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am a Java Spring web back-end developer with a strong foundation in computer science and a passion for creating robust and scalable web applications.
+			With a comprehensive career spanning several years, I have honed my skills in developing efficient and maintainable code.
+			My educational background includes CS major knowledge, such as database or operating systems.
+			Throughout my career, I have consistently demonstrated a commitment to excellence and a proactive approach to problem-solving.
                     </p>
                 </div>
             </div>
@@ -84,29 +85,29 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Achievements and Certifications</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2022">
+                <h3>College Achievement</h3>
+                <h4>Dean's List</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Dean's List, an award given to students with the highest academic records in college.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2019">
+                <h3>Language Certification</h3>
+                <h4>TOEIC</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    TOEIC score of 955, certified.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2019">
+                <h3>Computer Literacy Certification</h3>
+                <h4>MOS Master</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    MOS Master achieved, certified.
                 </p>
             </div>
         </div>
@@ -116,28 +117,64 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Sungkyunkwan University</h3>
+            <span class="education-date">2019 - 2021</span>
+            <h4>Department of Culture and Technology</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                In the department of Culture and Technology, I gained achievements in content planning and practical use of the latest software technologies related to it.
+		For example, I studied how actual software technology can support marketing, such as analyzing customers' movements through process mining.
             </p>
+	    <br>
+	    <h4>
+		Main Courses
+	    </h4>
+            <ul>
+                <li>
+                    Data Driven Marketing
+                </li>
+                <li>
+                    Cultural Industry and Data Analysis
+                </li>
+                <li>
+                    Language Engineering and Cultural Contents
+                </li>
+		<li>
+		    Game Content Planning (Game production planning)
+		</li>
+		<li>
+		    Cultural Technology (Game production practice)
+		</li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Sungkyunkwan University</h3>
+            <span class="education-date">2021 - 2023</span>
+            <h4>Department of Computer Science</h4>
+            <p>
+                In the department of Computer Science, I focused on fundamental CS knowledge.
+		Through this, I was able to achieve the achievement of not only using the latest technology, but also understanding the internal operating principles and creating applications of my own.
+            </p>
+	    <br>
+	    <h4>
+		Main Courses
+	    </h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Operating Systems
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Databases
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Computer Networks
+                </li>
+		<li>
+                    Information Security
+                </li>
+	        <li>
+                    Web Programming Practice
                 </li>
             </ul>
         </div>
@@ -155,11 +192,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Flea Market Using Django</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Clothing flea market webite that implements simple functions.
+			    Website provides features such as login, shopping cart, quantity selection, ordering, and admin management.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/cypsyco/Flea-Market-using-django">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,11 +209,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Vehicular Network Simulation in OMNeT++</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Vehicular Mobility Management (VMM) using OMNeT++.
+			    Implementation of IPv6 Over IEEE 802.11-OCB and IPv6 Vehicular Neighbor Discovery.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/cypsyco/Vehicular-Network-Simulation-in-OMNeT#vehicular-network-simulation-in-omnet">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,40 +227,21 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
+	    <li>Java</li>
+	    <li>C</li>
+	    <li>JavaScript</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Django Framework</li>
+            <li>Spring Framework</li>
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Get in Touch, jyh0872@gmail.com</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/jyh0872@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -237,7 +257,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> YUNHYUK JEON
                     </p>
                 </div>
                 <div class="col-sm-2 top">
