Update project images

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/flea.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -205,7 +205,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/omnet.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
